# cisc26_saferust_memvul

./: README.md
claudes-c-compiler/: BUILDING_LINUX.txt  Cargo.toml  DESIGN_DOC.md  README.md  a.out  cyclic.c  cyclic.py  exploit.c  exploit.py  hello.c  test.c
claudes-c-compiler/current_tasks/: fix_arm_asm_caspal_instruction.txt  fix_arm_asm_global_branch_relocs.txt  fix_arm_asm_org_directive.txt  fix_arm_asm_quad_prel64_relocation.txt  fix_arm_movw_symbolic_relocations.txt  fix_dash.txt  fix_i686_double_param_high_word_store.txt  fix_macro_param_prefix_substitution.txt  fix_pcre2_stack_frame_bloat.txt  fix_riscv_va_arg_long_double_struct.txt  fix_x86_asm_ifnb_ifb_conditional.txt  fix_x86_standalone_kernel_link_errors.txt  implement_string_literal_deduplication.txt
claudes-c-compiler/ideas/: cleanup_i686_dead_peephole_passes.txt  docs_verified_2026_01_29.txt  fix_arm_defconfig_kvm_va_layout.txt  fix_ir_unsigned_subint_representation.txt  fix_riscv_kernel_boot_hang.txt  fix_riscv_va_arg_runtime.txt  fix_x86_full_f128_80bit_precision.txt  high_codegen_runtime_perf.txt  high_compile_speed_improvements.txt  high_i686_boot_code_size_reduction.txt  high_sema_expansion_typed_ast.txt  high_use_def_chains.txt  high_value_location_abstraction.txt  low_structured_error_infrastructure.txt  new_projects.txt  new_projects_myasm.txt  optimization_passes_future.txt  qemu_build_support.txt  reduce_stack_frame_size_for_postgres.txt  register_allocator.txt
claudes-c-compiler/include/: arm_neon.h  avx2intrin.h  avx512fintrin.h  avxintrin.h  bmi2intrin.h  emmintrin.h  fmaintrin.h  (+10 more)
(+400 files in other folders)
